--- a/generator/sources/cli/README
+++ b/generator/sources/cli/README
@@ -29,21 +29,21 @@ Installation instructions
 ==========================
 Linux
 ------
-1. Unzip the package contents
-2. Replace the @BASEDIR@ token with the path to kalcliAutoComplete.php in:
+Unzip the package contents and run the setup.sh script, alternatively, you can follow these manual steps:
+* Replace the @BASEDIR@ token with the path to kalcliAutoComplete.php in:
 	kalcliAliases.sh
 	kalcliAutoComplete
 	logToCli
 	(e.g. if kalcliAutoComplete was copied to /a/b/kalcliAutoComplete @BASEDIR@ should be set to /a/b)
-3. Create a link to kalcliAutoComplete in /etc/bash_completion.d/
+* Create a link to kalcliAutoComplete in /etc/bash_completion.d/
 	ln -s @BASEDIR@/kalcliAutoComplete /etc/bash_completion.d/kalcliAutoComplete
-4. Register the auto completion: 
+* Register the auto completion: 
 	source /etc/bash_completion.d/kalcliAutoComplete
-5. Create a link to kalcliAliases.sh in /etc/profile.d/
+* Create a link to kalcliAliases.sh in /etc/profile.d/
 	ln -s @BASEDIR@/kalcliAliases.sh /etc/profile.d/kalcliAliases.sh
-6. Enable the aliases
+* Enable the aliases
 	source /etc/profile.d/kalcliAliases.sh
-7. Copy config/config.template.ini to config/config.ini and fill out the parameters:
+* Copy config/config.template.ini to config/config.ini and fill out the parameters:
 	a. Secret repositories - required for the extractKs / generateKs / renewKs utilities.
 		Two types of repositories can be configured:
 		1. Preset repositories - contain a fixed list of (partner id, admin secret) pairs
